<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalendarAppAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="empty">No appointments!</string>
    <string name="titleLabel">Title</string>
    <string name="timeLabel">Time</string>
    <string name="detailsLabel">Details</string>
    <string name="dateLabel">17 March 2017</string>
    <string name="timeHint">e.g. 15:30</string>
    <string name="hello"> Hello, Android !! </string>
    <string name="when"><b>When: </b></string>
    <string name="original_hint">Enter partial text</string>
    <string name="synonym_picker">Synonym picker</string>
    <string name="result_label">Suggestions:</string>
    <string name="working">Working...</string>
    <string name="error">(Web service error)</string>
    <string name="interrupted">(Web service interrupted)</string>
    <string name="no_results">(No suggestions)</string>

</resources>