<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="home.eduard.calendarappandroid.ViewEditAppointment">

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_row="0"
        android:text="@string/dateLabel"
        android:textSize="@dimen/label_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/saveButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="right"
        android:layout_row="0"
        android:text="Save" />

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:text="@string/titleLabel"
        android:textSize="@dimen/label_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="2"
        android:maxLines="3" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="3"
        android:text="@string/timeLabel"
        android:textSize="@dimen/label_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/timeEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="4"
        android:hint="@string/timeHint"
        android:inputType="time"
        android:singleLine="true" />

    <TextView
        android:id="@+id/detailsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_row="5"
        android:text="@string/detailsLabel"
        android:textSize="@dimen/label_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/highlight_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_gravity="right"
        android:layout_row="5"
        android:text="Get synonyms" />

    <EditText
        android:id="@+id/detailsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="6"
        android:maxLines="3" />

    <TextView
        android:id="@+id/errorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="7"
        android:text=""
        android:textColor="@color/red"
        android:textSize="@dimen/label_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_row="8"
        android:text="@string/synonym_picker"
        android:textSize="@dimen/label_size" />

    <Button
        android:id="@+id/synonym_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_row="8"
        android:layout_gravity="right"
        android:text="Show synonyms" />

    <EditText
        android:id="@+id/original_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="9"
        android:hint="@string/original_hint"
        android:inputType="textNoSuggestions"
        android:padding="10dip"
        android:textSize="18sp" />

</GridLayout>